<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_structural"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_structural_analysis" />
        <item
            android:id="@+id/nav_3d_solid"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_solid_analysis" />
        <item
            android:id="@+id/nav_terminal"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_advanced_terminal" />
    </group>

    <item android:title="@string/menu_support_tools">
        <menu>
            <item
                android:id="@+id/nav_docs"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_documentation" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
