<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_import"
        android:title="@string/menu_import_inp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_all"
        android:title="@string/menu_export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/menu_about_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy_policy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never" />
</menu>
